--- a/game/templates/game/newgame.html
+++ b/game/templates/game/newgame.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 <div class="form rpgui-container framed-golden">
-    <h1>Log in</h1>
+    <h1>New Game</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <div class="rpgui-center">
-            <button class="rpgui-button" type="submit"><p>Log in</p></button>
+            <button class="rpgui-button" type="submit"><p>Submit</p></button>
         </div>
     </form>
-</div>
-{% endblock %}
+<div>
+{% endblock%}
