Enhance game design and ergonomics

--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="center rpgui-container framed">
+    <div class="rpgui-container framed">
         <h1 class="title">Role play</h1>
 
         <hr class="golden"/>
