--- a/game/static/roleplay.css
+++ b/game/static/roleplay.css
@@ -7,15 +7,18 @@
     font-size: x-large;
 }
 
-.center.rpgui-container.framed {
+.rpgui-container.framed {
+    margin: 2em;
     position: static;
     max-width: 1024px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.rpgui-container.framed {
-    margin: 2em;
+.character.rpgui-container.framed-grey {
+    position: relative;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .menu {
