--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -2,40 +2,38 @@
 
 {% block content %}
     <div class="rpgui-container framed">
-        {% for character in character_list %}
-            <p>{{ character.name }}</p>
-            <div class="rpgui-container framed-grey">
-                <p>Race: {{ character.get_race_display }}</p>
-                <p>XP: {{ character.xp }}</p>
-                <p>HP: {{ character.hp }} / {{ character.max_hp }}</p>
-                <div class="rpgui-progress red" data-value="0.8"></div>
-            </div>
-            {% for pending_action in pending_action_list %}
-                {% if pending_action.character.id == character.id %}
-                    <div class="rpgui-container framed-grey">
-                        {% if pending_action.action_type == 'D' %}
-                            <a href={% url 'launch_dice' game.id pending_action.character.id %}> {{ pending_action.get_action_type_display }} <i class="fa-regular fa-dice-d20"></i></a>
-                        {% elif pending_action.action_type == 'C' %}
-                            <a href={% url 'make_choice' game.id pending_action.character.id %}> {{ pending_action.get_action_type_display }} <i class="fa-regular fa-question"></i></a>
-                        {% endif %}
-                    </div>
-                {% endif %}
-            {% empty %}
-            {% endfor %}
-        {% empty %}
-            <p>No characters for this game...</p>
-        {% endfor %}
-    </div>
-
-    <div class="center rpgui-container framed">
-        <h1 class="title">Role play</h1>
+        <h1 class="title">{{ game }}</h1>
         <div class="rpgui-center">
             <a href={% url 'index' %}>- Return to main menu -</a>
         </div>
 
         <hr class="golden"/>
 
-        <h1>{{ game }}</h1>
+        {% for character in character_list %}
+            <div class="character rpgui-container framed-grey">
+                <p>
+                    <a href="" style="width:100em">{{ character.name }}</a>
+                    Race: {{ character.get_race_display }},
+                    XP: {{ character.xp }},
+                    HP: {{ character.hp }} / {{ character.max_hp }}
+                    {% for pending_action in pending_action_list %}
+                        {% if pending_action.character.id == character.id %}
+                            <a class="character-action" href={% url 'launch_dice' game.id pending_action.character.id %}>
+                                <button class="rpgui-button">
+                                    <p>{{ pending_action.get_action_type_display }}</p>
+                                </button>
+                            </a>
+                        {% endif %}
+                    {% empty %}
+                    {% endfor %}
+                </p>
+            </div>
+        {% empty %}
+            <p>No characters for this game...</p>
+        {% endfor %}
+
+        <hr />
+
         <div class="rpgui-container framed-grey">
             {% for narrative in narrative_list %}
                 <p>{{ narrative.date }} {{ narrative.message }}</p>
@@ -45,6 +43,7 @@
         </div>
         {% if perms.narrative.add_narrative %}
             <div class="rpgui-center">
+                <a href=""><button disabled class="rpgui-button"><p>Add Character</p></button></a>
                 <a href={% url 'newnarrative' game.id %}><button class="rpgui-button"><p>Continue the story</p></button></a>
             </div>
         {% endif %}
