--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -36,13 +36,13 @@
             <div class="rpgui-center">
                 <p>
                     {% if page_obj.has_previous %}
-                        <a href="?page=1">&laquo; first</a>
-                        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                        <a href="?page=1">&laquo; First</a>
+                        <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
                     {% endif %}
                     Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
                     {% if page_obj.has_next %}
-                        <a href="?page={{ page_obj.next_page_number }}">next</a>
-                        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                        <a href="?page={{ page_obj.next_page_number }}">Next</a>
+                        <a href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
                     {% endif %}
                 </p>
                 {% if perms.game.add_game %}
