--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -40,6 +40,19 @@
             {% empty %}
                 <p>The story did not start yet...</p>
             {% endfor %}
+            <div class="rpgui-center">
+                <p>
+                    {% if page_obj.has_previous %}
+                        <a href="?page=1">&laquo; First</a>
+                        <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                    {% endif %}
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                    {% if page_obj.has_next %}
+                        <a href="?page={{ page_obj.next_page_number }}">Next</a>
+                        <a href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
+                    {% endif %}
+                </p>
+            </div>
         </div>
         {% if perms.narrative.add_narrative %}
             <div class="rpgui-center">
