--- a/game/templates/game/newgame.html
+++ b/game/templates/game/newgame.html
@@ -10,5 +10,5 @@
                 <button class="rpgui-button" type="submit"><p>Submit</p></button>
             </div>
         </form>
-        <div>
+    </div>
 {% endblock%}
