--- a/game/templates/game/success.html
+++ b/game/templates/game/success.html
@@ -13,5 +13,5 @@
             {% csrf_token %}
             <input type="submit" value="Return to the game">
         </form>
-        <div>
+    </div>
 {% endblock%}
