Fix typos in HTML pages

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -27,7 +27,7 @@
                     {% empty %}
                     {% endfor %}
                     {% if user.is_authenticated and perms.game.add_pendingaction %}
-                        <a href=""><button disabled class="rpgui-button"><p>Add Pending Action</p></button></a>
+                        <a href=""><button disabled class="rpgui-button"><p>Ask for action</p></button></a>
                     {% endif %}
                 </p>
             </div>
@@ -36,7 +36,7 @@
         {% endfor %}
         {% if user.is_authenticated and perms.game.change_character %}
             <div class="rpgui-center">
-                <a href={% url 'add_character' game.id %}><button class="rpgui-button"><p>Add Character</p></button></a>
+                <a href={% url 'add_character' game.id %}><button class="rpgui-button"><p>Add a character</p></button></a>
                 <a href=""><button disabled class="rpgui-button"><p>Start the game</p></button></a>
                 <a href=""><button disabled class="rpgui-button"><p>End the game</p></button></a>
             </div>
