--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -49,7 +49,7 @@
                     {% endif %}
                 </p>
                 {% if perms.game.add_game %}
-                    <a href="{% url 'newgame' %}"><button class="rpgui-button"><p>Create a new game</p></button></a></p>
+                    <a href="{% url 'game-create' %}"><button class="rpgui-button"><p>Create a new game</p></button></a></p>
                 {% endif %}
             </div>
 
