Enhance style of master's actions buttons

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -41,7 +41,7 @@
             <p>No characters for this game...</p>
         {% endfor %}
         {% if user.is_authenticated and perms.game.change_character %}
-            <div class="rpgui-center">
+            <div class="rpgui-center inline">
                 <a href={% url 'add_character' game.id %}><button class="rpgui-button"><p>Add a character</p></button></a>
                 <a href=""><button disabled class="rpgui-button"><p>Start the game</p></button></a>
                 <a href=""><button disabled class="rpgui-button"><p>End the game</p></button></a>
