Give min height for tale display

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -11,7 +11,9 @@
 
         {% load static %}
         <img class="rpgui-icon wizard" src={% static 'images/wizard.png' %}>
-        <p>{{ tale }}</p>
+        <div class="tale">
+            <p >{{ tale }}</p>
+        </div>
 
         <hr/>
 
