--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -45,19 +45,24 @@
         {% if user.is_authenticated %}
             <div class="rpgui-center inline">
                 {% if perms.game.change_character %}
-                    {% if not is_game_started %}
+                    {% if game.status == "P" %}
                         <a href={% url 'add_character' game.id %}><button class="rpgui-button"><p>Add a character</p></button></a>
                     {% else %}
                         <a href=""><button disabled class="rpgui-button"><p>Add a character</p></button></a>
                     {% endif %}
                 {% endif %}
                 {% if perms.game.change_game %}
-                    {% if not is_game_started %}
+                    {% if game.status == "P" %}
                         <a href={% url 'game-start' game.id %}><button class="rpgui-button"><p>Start the game</p></button></a>
+                        <a href=""><button disabled class="rpgui-button"><p>End the game</p></button></a>
+                    {% elif game.status == "S" %}
+                        <a href=""><button disabled class="rpgui-button"><p>Start the game</p></button></a>
+                        <a href={% url 'game-end' game.id %}><button class="rpgui-button"><p>End the game</p></button></a>
                     {% else %}
                         <a href=""><button disabled class="rpgui-button"><p>Start the game</p></button></a>
+                        <a href=""><button disabled class="rpgui-button"><p>End the game</p></button></a>
                     {% endif%}
-                    <a href=""><button disabled class="rpgui-button"><p>End the game</p></button></a>
+
                 {% endif %}
             </div>
         {% endif %}
