Disable the possibility to continue the story when game status is not started

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -91,7 +91,11 @@
         </div>
         {% if user.is_authenticated and perms.game.add_tale %}
             <div class="rpgui-center">
-                <a href={% url 'tale-create' game.id %}><button class="rpgui-button"><p>Continue the story</p></button></a>
+                {% if game.status == "S" %}
+                    <a href={% url 'tale-create' game.id %}><button class="rpgui-button"><p>Continue the story</p></button></a>
+                {% else %}
+                    <a href=""><button disabled class="rpgui-button"><p>Continue the story</p></button></a>
+                {% endif %}
             </div>
         {% endif %}
 
