--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -29,13 +29,21 @@
 
             <h1>Ongoing games</h1>
             <p>Select the game you want to join.</p>
-            <div class="rpgui-container framed-grey">
-                {% for game in page_obj %}
-                    <p>{{ game.start_date }} <a href={% url 'game' game.id %}>{{ game }}</a></p>
-                {% empty %}
+
+            {% for game in page_obj %}
+                <div class="rpgui-container framed-grey">
+                    <h2><a href={% url 'game' game.id %}>{{ game }}</a></h2>
+                    <p>Status: {{ game.get_status_display }}</p>
+                    <p>
+                        Start date: {{ game.start_date }},
+                        End date: {{ game.end_date }}
+                    </p>
+                </div>
+            {% empty %}
+                <div class="rpgui-container framed-grey">
                     <p>No games are available...</p>
-                {% endfor %}
-            </div>
+                </div>
+            {% endfor %}
             <div class="rpgui-center">
                 <p>
                     {% if page_obj.has_previous %}
