Implement IncreaseXpView, DamageView and HealView

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -36,6 +36,9 @@
                     {% endfor %}
                     {% if user.is_authenticated and perms.game.change_character %}
                         <a href={% url 'character-add-pending-action' game.id character.id %}><button  class="rpgui-button"><p>Ask for action</p></button></a>
+                        <a href={% url 'character-increase-xp' game.id character.id %}><button  class="rpgui-button"><p>Increase XP</p></button></a>
+                        <a href={% url 'character-damage' game.id character.id %}><button  class="rpgui-button"><p>Damage</p></button></a>
+                        <a href={% url 'character-heal' game.id character.id %}><button  class="rpgui-button"><p>Heal</p></button></a>
                     {% endif %}
                 </p>
             </div>
