--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -20,7 +20,7 @@
         {% for character in character_list %}
             <div class="character rpgui-container framed-grey">
                 <p>
-                    <a href="" style="width:100em">{{ character.name }}</a>
+                    <a href={% url 'character-detail' character.id %} style="width:100em">{{ character.name }}</a>
                     Race: {{ character.get_race_display }},
                     XP: {{ character.xp }},
                     HP: {{ character.hp }} / {{ character.max_hp }}
