Fix wrong URL for dice launch

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -26,7 +26,7 @@
                     HP: {{ character.hp }} / {{ character.max_hp }}
                     {% for pending_action in pending_action_list %}
                         {% if pending_action.character.id == character.id %}
-                            <a class="character-action" href={% url 'launch_dice' game.id pending_action.character.id %}>
+                            <a class="character-action" href={% url 'dicelaunch-create' game.id pending_action.character.id %}>
                                 <button class="rpgui-button">
                                     <p>{{ pending_action.get_action_type_display }}</p>
                                 </button>
