--- a/game/templates/game/success.html
+++ b/game/templates/game/success.html
@@ -9,9 +9,6 @@
             <p>{{ character }}, you made the following choice:</p>
             <p>{{ choice }}</p>
         {% endif %}
-        <form method="post">
-            {% csrf_token %}
-            <input type="submit" value="Return to the game">
-        </form>
+        <a href={% url 'game' game.id %}><button class="rpgui-button" ><p>Return to the game</p></button></a>
     </div>
 {% endblock%}
