--- a/game/templates/game/dice.html
+++ b/game/templates/game/dice.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="action rpgui-container framed-golden">
+    <div class="form rpgui-container framed-golden">
         <h1>{{ game }}</h1>
         <p>{{ character }}! It is your turn.</p>
         <form method="post">
             {% csrf_token %}
-            <input type="submit" value="Launch dice!">
+            <div class="rpgui-center">
+                <button class="rpgui-button" type="submit"><p>Launch dice</p></button>
+            </div>
         </form>
     </div>
 {% endblock%}
