--- a/game/templates/game/success.html
+++ b/game/templates/game/success.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="action rpgui-container framed-golden">
+    <div class="info rpgui-container framed-golden">
         <h1>{{ game }}</h1>
         {% if dice_launch %}
             <p>{{ character }}, your score is: {{ dice_launch.score }}!</p>
@@ -9,6 +9,7 @@
             <p>{{ character }}, you made the following choice:</p>
             <p>{{ choice }}</p>
         {% endif %}
-        <a href={% url 'game' game.id %}><button class="rpgui-button" ><p>Return to the game</p></button></a>
-    </div>
+        <div class="rpgui-center">
+            <a href={% url 'game' game.id %}><button class="rpgui-button" ><p>Return to the game</p></button></a>
+        </div>
 {% endblock%}
