--- a/game/templates/game/success.html
+++ b/game/templates/game/success.html
@@ -7,4 +7,5 @@
         <div class="rpgui-center">
             <a href={% url 'game' game.id %}><button class="rpgui-button" ><p>Return to the game</p></button></a>
         </div>
+    </div>
 {% endblock%}
