Re-indent game template

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -11,16 +11,16 @@
 
         {% load static %}
         <img class="rpgui-icon wizard" src={% static 'images/wizard.png' %}>
-        <div class="tale">
-            <p >{{ tale }}</p>
-        </div>
+        <div class="tale"><p >{{ tale }}</p></div>
 
         <hr/>
 
         {% for character in character_list %}
             <div class="character rpgui-container framed-grey">
                 <p>
-                    <a href={% url 'character-detail' character.id %} style="width:100em">{{ character.name }}</a>
+                    <a href={% url 'character-detail' character.id %} style="width:100em">
+                        {{ character.name }}
+                    </a>
                     Race: {{ character.get_race_display }},
                     XP: {{ character.xp }},
                     HP: {{ character.hp }} / {{ character.max_hp }}
@@ -45,10 +45,18 @@
                     {% if user.is_authenticated and perms.game.change_character and game.status == "O" %}
                         <hr/>
                         <div class ="rpgui-center inline">
-                            <a href={% url 'pendingaction-create' game.id character.id %}><button  class="rpgui-button"><p>Ask for action</p></button></a>
-                            <a href={% url 'xpincrease-create' game.id character.id %}><button  class="rpgui-button"><p>Increase XP</p></button></a>
-                            <a href={% url 'damage-create' game.id character.id %}><button  class="rpgui-button"><p>Damage</p></button></a>
-                            <a href={% url 'healing-create' game.id character.id %}><button  class="rpgui-button"><p>Heal</p></button></a>
+                            <a href={% url 'pendingaction-create' game.id character.id %}>
+                                <button  class="rpgui-button"><p>Ask for action</p></button>
+                            </a>
+                            <a href={% url 'xpincrease-create' game.id character.id %}>
+                                <button  class="rpgui-button"><p>Increase XP</p></button>
+                            </a>
+                            <a href={% url 'damage-create' game.id character.id %}>
+                                <button  class="rpgui-button"><p>Damage</p></button>
+                            </a>
+                            <a href={% url 'healing-create' game.id character.id %}>
+                                <button  class="rpgui-button"><p>Heal</p></button>
+                            </a>
                         </div>
                     {% endif %}
                 </p>
@@ -60,21 +68,37 @@
             <div class="rpgui-center inline">
                 {% if perms.game.change_character %}
                     {% if game.status == "P" %}
-                        <a href={% url 'game-add-character' game.id %}><button class="rpgui-button"><p>Add a character</p></button></a>
+                        <a href={% url 'game-add-character' game.id %}>
+                            <button class="rpgui-button"><p>Add a character</p></button>
+                        </a>
                     {% else %}
-                        <a href=""><button disabled class="rpgui-button"><p>Add a character</p></button></a>
+                        <a href="">
+                            <button disabled class="rpgui-button"><p>Add a character</p></button>
+                        </a>
                     {% endif %}
                 {% endif %}
                 {% if perms.game.change_game %}
                     {% if game.status == "P" %}
-                        <a href={% url 'game-start' game.id %}><button class="rpgui-button"><p>Start the game</p></button></a>
-                        <a href=""><button disabled class="rpgui-button"><p>End the game</p></button></a>
+                        <a href={% url 'game-start' game.id %}>
+                            <button class="rpgui-button"><p>Start the game</p></button>
+                        </a>
+                        <a href="">
+                            <button disabled class="rpgui-button"><p>End the game</p></button>
+                        </a>
                     {% elif game.status == "O" %}
-                        <a href=""><button disabled class="rpgui-button"><p>Start the game</p></button></a>
-                        <a href={% url 'game-end' game.id %}><button class="rpgui-button"><p>End the game</p></button></a>
+                        <a href="">
+                            <button disabled class="rpgui-button"><p>Start the game</p></button>
+                        </a>
+                        <a href={% url 'game-end' game.id %}>
+                            <button class="rpgui-button"><p>End the game</p></button>
+                        </a>
                     {% else %}
-                        <a href=""><button disabled class="rpgui-button"><p>Start the game</p></button></a>
-                        <a href=""><button disabled class="rpgui-button"><p>End the game</p></button></a>
+                        <a href="">
+                            <button disabled class="rpgui-button"><p>Start the game</p></button>
+                        </a>
+                        <a href="">
+                            <button disabled class="rpgui-button"><p>End the game</p></button>
+                        </a>
                     {% endif%}
 
                 {% endif %}
@@ -106,9 +130,13 @@
         {% if user.is_authenticated and perms.game.add_tale %}
             <div class="rpgui-center">
                 {% if game.status == "O" %}
-                    <a href={% url 'tale-create' game.id %}><button class="rpgui-button"><p>Continue the story</p></button></a>
+                    <a href={% url 'tale-create' game.id %}>
+                        <button class="rpgui-button"><p>Continue the story</p></button>
+                    </a>
                 {% else %}
-                    <a href=""><button disabled class="rpgui-button"><p>Continue the story</p></button></a>
+                    <a href="">
+                        <button disabled class="rpgui-button"><p>Continue the story</p></button>
+                    </a>
                 {% endif %}
             </div>
         {% endif %}
